tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_35.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := ((2 + ((2 DIV x) MOD 2)) # ((1223 - (+ 1223)) - (+ 2)));
               p := (200 # y);
               r := (((1223 = (1223 - z)) OR (1 < (0 MOD 1223))) & (y = 200));
               x := y;
  (* error *)  z := ((((q - 0) MOD (1223 MOD 1)) DIV (- 1)) MOD 2);
               q := (x = 0);
               y := 2;
               y := (1223 MOD 1223);
               p := r;
               r := ((x + ((z MOD z) DIV (- z))) = z)
END Test15.